# NakaMetPy

./: .gitignore  .travis.yml  README.md  README.txt  docs  pyproject.toml  requirements.txt  setup.cfg  setup.py
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
archive/: conf.py  meta.yaml
doc/: .buildinfo  genindex.html  nakametpy.cmaps.html  nakametpy.constants.html  nakametpy.html  nakametpy.jma.html  nakametpy.kinematics.html  nakametpy.thermo.html  nakametpy.util.html  objects.inv  py-modindex.html  search.html  searchindex.js
doc/.doctrees/: environment.pickle  index.doctree  nakametpy.jma.doctree  nakametpy.kinematics.doctree  nakametpy.util.doctree
doc/_modules/: index.html
doc/_sources/: index.rst.txt  nakametpy.cmaps.rst.txt  nakametpy.rst.txt  nakametpy.util.rst.txt
docs/: .buildinfo  .nojekyll  constants.html  documentation.html  genindex.html  index.html  kinematics.html  modules.html  nakametpy.cmaps.html  nakametpy.constants.html  nakametpy.grads.html  nakametpy.html  nakametpy.jma.html  nakametpy.kinematics.html  nakametpy.thermo.html  nakametpy.util.html  objects.inv  py-modindex.html  search.html  searchindex.js  thermo.html
docs/.doctrees/: constants.doctree  environment.pickle  index.doctree  (+11 more)
nakametpy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
past_doc/: modules.html  search.html
sphinx/: ORG.conf.py  conf.py  index.rst  modules.rst  nakametpy.constants.rst
src/: __init__.py  _version.py  kinematics.py  thermo.py
tests/: __init__.py  test-util.py  test_bufr.py  test_thermo.py  test_util.py  thermo-test.py
(+53 files in other folders)
