[tool.poetry]
name = "NakaMetPy"
version = "0.2.7"
description = "Meteorological Tools for Calculation and Colormap."
authors = ["muchojp <contact.muchiwo@mail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
numpy = "^1.17.0"
matplotlib = "^3.0.0"
nose = "^1.1.0"

[tool.poetry.dev-dependencies]
pytest = "^3.4"
